--- a/Step2_PATCHUNET.ipynb
+++ b/Step2_PATCHUNET.ipynb
@@ -194,7 +194,7 @@
     }
    ],
    "source": [
-    " #Omar M. Saad\n",
+    " ##Created by Omar M. Saad #26-12-2020\n",
     "from keras.layers import Input, Dense, Dropout, concatenate, UpSampling1D, Flatten, MaxPooling1D, BatchNormalization, average, Conv1D\n",
     "from keras.models import Model\n",
     "import scipy.io\n",
